@@ -61,3 +61,97 @@ Stream (JAVA) -> Lista(JAVA)        Funcion de reduccion
 
 List(JAVA) -> RDD(Spark)
     conexion.parallelize(miLista)
+
+
+---
+# JAVA 9
+
+Se introducen los módulos en JAVA
+module: Diccionario ---> .jar
+    com.diccionario -> Exporto
+                interface Diccionario
+                            String getIdioma()
+                            boolean existe(String palabra)
+                            Optional<List<String>> getDefiniciones(String palabra)
+                interface SuministradorDeDiccionarios
+                            boolean tienesDiccionaoDe(String idioma)
+                            Optional<Diccionario> getDiccionario(String idioma)
+                interface SuministradorDeDiccionarioFactory
+                            static SuministradorDeDiccionarios getInstance(){
+                                return new SuministradorDeDiccionariosImpl();
+                            }
+    com.diccionario.impl    -> NO LO EXPORTO
+                    public class DiccionarioImpl
+                            ....
+                    public class SuministradorDeDiccionariosImpl
+                            ....
+
+-----
+
+diccionario.jar
+App que use la libreria
+
+App.java
+
+    import com.diccionario.Diccionario;
+    import com.diccionario.SuministradorDeDiccionarios;
+    import com.diccionario.SuministradorDeDiccionariosFactory;
+    import com.diccionario.impl.SuministradorDeDiccionariosImpl;    // ESTO ES UN DESASTRE. FATAL TIO !!! MUY MALA PRACTICA- HORRIBLE
+                                                                    // DESASTRE ABSOLUTO
+
+    public void ejecutar() {
+        ....
+        String palabra = "hola";
+        String idioma = "ES";
+        boolean existe = false;
+
+        SuministradorDeDiccionarios suministrador = SuministradorDeDiccionariosFactory.getInstance();
+        Optional<Diccionario> posibleDiccionario = suministardor.getDiccionario(idioma);
+        if( posibleDiccionario.isPresent()){
+            existe = posibleDiccionario.get().existe(palabra);
+        }
+
+        // Hago lo que quiero con el "existe"
+    }
+
+# Principio de Inversión de dependencias
+
+Es uno de los 5 grandes princpios de desarrollo de software SOLID.
+Básicamente dice: 
+    Un código de alto nivel no debe depender de Implementaciones, sino de abtracciones (interfaces)
+
+# Inyección de dependencias
+
+Es un patrón de diseño de software en el mundo de la POO, por el que:
+Una clase no crea instancias de objetos... sino que le son suministradas (INYECTADAS)
+
+
+--add-opens=java.base/java.lang=ALL-UNNAMED 
+--add-opens=java.base/java.lang.invoke=ALL-UNNAMED 
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED 
+--add-opens=java.base/java.io=ALL-UNNAMED 
+--add-opens=java.base/java.net=ALL-UNNAMED 
+--add-opens=java.base/java.nio=ALL-UNNAMED 
+--add-opens=java.base/java.util=ALL-UNNAMED 
+--add-opens=java.base/java.util.concurrent=ALL-UNNAMED 
+--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED 
+--add-opens=java.base/sun.nio.ch=ALL-UNNAMED 
+--add-opens=java.base/sun.nio.cs=ALL-UNNAMED 
+--add-opens=java.base/sun.security.action=ALL-UNNAMED 
+--add-opens=java.base/sun.util.calendar=ALL-UNNAMED 
+--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+
+c:\Archivos de Programa\hadoop\bin\winutils.exe
+
+----
+.setMaster("local")
+
+CUIDO CON ESTO...
+Esto levanta un cluster de Spark (y hadoop), en nuestra máquina, dentro de la misma JVM que mi programa
+
+Cuando vaya a un cluster de verdad de la buena
+
+MI PC                                                       MASTER                          10 nodos
+------                                                      ------                          --------------
+JVM                                                         JVM (Spark)                     JVM (Spark)
+que se conecta con un master
